
    *******************************************************
    Warnings, errors, malfunctions, code patches, suggestions
    email it to: develop@darkbot.info
    Support (only): http://forum.darkbot.info
    *******************************************************


Darkbot 7.0-RC7: Mar 13th, 2003

	- DEFAULT_UMODE is now set immediately upon connection. 
 	  Several users said this was not being done, it was. It was
 	  just waiting >300 seconds, for whatever reason. Also, the
	  bot command PERFORMS now sets DEFAULT_UMODE in addition
  	  to running the the performs file.

	- New command line option.
	  -I now specifies the location of the directory containing
          the data files (by default, dat/).

	- Multiple command line arguements are now supported. 
 	  I have no clue why this wasn't done before.

	- The .debug and .debug2 scripts were missing from the
 	  distribution. They're back now.

	- Found another place where the bot wasn't deleting old
	  userlist entries. This has been fixed.

	- Added the CHANUSERS command. All this does is return
	  a list of users on either the specified channel, or 
	  the current channel, if none is specified. I may 
	  remove this eventually, as i'm just using it for 
 	  debugging purposes right now.

	- CHANINFO command will output to whatever channel it
	  received the command from now, instead of the channel
	  it's showing data about.

	- The CHANINFO command now supports a channel name
 	  parameter. Dunno why it didn't have that before...

	- Darkbot is on CVS now at SourceForge!

	- Soapta revamped the google module.

	- The MEM command now displays the correct process. I removed
	  the -x flag from the ps command it was issuing, and it fixed
	  it. If anyone sees any reason the -x flag should be used, 
	  let me know and i'll recode the whole thing.

	- Added SETHOST alias for the VHOST command.

	- Updates to the Ebonic and French languages which define